--- a/public/assets/css/global/global.css
+++ b/public/assets/css/global/global.css
@@ -1206,32 +1206,7 @@ input:-moz-placeholder { font-size:12px; }
 .friendApply h3 { font-size:14px;padding:5px 0 10px; }
 .friendApply p{ line-height:2;}
 
-/* 404页面 */
-/*
-.notfound { width:960px;height:450px;background:#fff url(images/404bg.jpg) right top no-repeat;overflow:hidden; }
-.notfound .text { padding:55px 65px;width:255px; }
-.notfound .text h2 { font-size:16px;padding-bottom:10px; }
-.notfound .text .vline { color:#dedede; }
-.notfound .text .words { margin-top:30px;padding-top:10px;border-top:1px dotted #d1d1d1;line-height:2.5; }
 
-*/
-/* 宕机页面 *//*
-
-.toobusy { position:relative;width:960px;height:620px;background:#fff url(images/toobusy.png) center no-repeat;overflow:hidden; }
-.toobusy .text { position:absolute;z-index:9;left:130px;bottom:35px; }
-
-*/
-/* 公共页面 *//*
-
-.common { padding:40px;margin:0 auto;background:#fff;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;-moz-box-shadow:0 1px 1px rgba(0,0,0,0.1);-webkit-box-shadow:0 1px 1px rgba(0,0,0,0.1);box-shadow:0 1px 1px rgba(0,0,0,0.1); }
-.common h2 { line-height:1.2;margin:0 auto 20px;padding:0 0 10px 0;font-size:16px;border-bottom:1px dotted #d1d1d1; }
-.common p { margin:0 0 20px 0; }
-.common .job-block { margin-bottom:30px; }
-.common .job-block h3 { font-size:14px;font-weight:normal;margin-bottom:20px; }
-*/
-
-/* 分享 */
-.samdwich{padding: 15px 5px 0 5px;}
 
 /* 标签背景 */
 .tag-link li { float:left;display:inline;margin:10px 4px 0 4px;padding-left:12px;background:url(images/tag-bg2.png) no-repeat;_background:url(images/tag-bg2-ie6.png) no-repeat;cursor:pointer; }
@@ -1322,79 +1297,6 @@ input:-moz-placeholder { font-size:12px; }
 
 
 
-/* 类目导航条 */
-/*
-.category-nav { height:36px;border-left:1px solid #f1f1e6\9;border-right:1px solid #f1f1e6\9;box-shadow:0 1px 1px rgba(34,25,25,0.2);-moz-box-shadow:0 1px 1px rgba(34,25,25,0.2);-webkit-box-shadow:0 1px 1px rgba(34,25,25,0.2); }
-.category-nav .nav-base { padding-top:3px;background:#dedede; }
-.category-nav .nav-bar { height:33px;background:#fff;position:relative; }
-.category-nav .nav-bar li { float:left;margin-top:-3px;padding-top:10px;position:relative; }
-.category-nav .nav-bar li.on { background:url(images/on.png) repeat-x; }
-.category-nav .nav-bar li a { float:left;height:18px;line-height:18px;padding:0 20px;color:#333;border-right:1px dotted #dedede; }
-.category-nav .nav-bar li.on a { padding:0 15px;font-size:14px;font-weight:bold; }
-.category-nav .nav-bar li a.more { padding:0 30px 0 20px; }
-.category-nav .nav-bar li.on a.more { padding:0 25px 0 15px; }
-.category-nav .nav-bar li a.more .arrow-dn { position:absolute;width:10px;height:18px;top:10px;right:20px;background:url(images/arrow-d.png) no-repeat center right; }
-.category-nav .nav-bar li.on a.more .arrow-dn { right:15px; }
-.category-nav .nav-bar i { position:absolute;z-index:9;left:0;top:-3px;width:100%;height:1px;opacity:0.1;filter:alpha(opacity=10);background:#000;*display:none; }
-.category-nav .nav-bar .line-shadow { position:absolute;z-index:9;left:0;bottom:0;width:100%;height:1px;box-shadow:0 1px 1px rgba(34,25,25,0.2);-moz-box-shadow:0 1px 1px rgba(34,25,25,0.2);-webkit-box-shadow:0 1px 1px rgba(34,25,25,0.2);overflow:hidden; }
-*/
-
-/* 九宫格 */
-/*.nineGrid { width:204px;margin-right:13px;padding:15px 13px;color:#999;background-color:#fff;float:left; }
-.lastNineGrid { margin-right:0px; }
-.nineGrid h4 { line-height:16px;height:16px;font-size:16px; }
-.nineGrid h4 a { color:#666; }
-.nineGrid h4 a:hover { color:#5AD;text-decoration:none; }
-.nineGrid .bd { margin-top:13px; }
-.nineGrid .bd img{ width:62px;height:62px;border:1px solid #dedede;float:left;margin:0 2px 4px 2px; }
-.nineGrid .ft { padding-top:10px; }*/
-/*QQ捆绑帐号合并*/
-/*
-.bundled_qq{padding:20px; overflow:hidden; text-align:center;}
-.bundled_qq p{ text-indent:2em;  color:#666; text-align:left;line-height:28px;}
-.bundled_qq .l-q-q{ background:url(images/l-qq.png);display:inline-block; margin:0 5px;width:120px;height:24px;text-indent:-1999px;}
-.bundled_qq .l-tencent{display:inline-block; line-height:16px;background-image:url(images/l-tencent.png);background-repeat:no-repeat;  height:24px; width:120px; text-indent:-999px;}
-.bundled_qq .s-tencent{display:inline-block;line-height:16px;background-image:url(images/icons-share.png);background-repeat:no-repeat; background-position:0 -280px; margin:0 5px; color:#5AD; }
-.bundled_qq .know{ margin-top:20px;vertical-align:middle }
-.bundled_qq .kn{ height:24px; margin:0 auto; width:260px; clear:both; padding:10px 0 0 0}
-
-.bundled_qq .know input{ vertical-align:middle; margin-right:2px;}
-*/
-
-/* 请好友鉴定弹窗 */
-/*
-.bind-sns,.bind-sns li{float:left}
-.bind-sns li{width: 16px;height: 16px;cursor: pointer;margin-right: 5px;}
-.invite-judge-dialog{}
-.invite-judge-dialog h3{float:left}
-.invite-judge-dialog .oper-btn{border-top:1px dotted #ddd;padding-top:10px;}
-.invite-judge-dialog .oper-btn .tip{margin-left:90px;}
-.invite-judge-dialog .choice-judge-style{margin-right:10px;}
-.invite-judge-dialog .choice-judge-style label{font-weight:bolder;cursor:pointer;}
-.invite-judge-dialog .choice-judge-style label input{margin-right:2px;}
-
-.judge-by-sns{margin-bottom:15px;}
-.judge-by-sns textarea{width:365px;height:50px;clear:both;margin:10px 0 0px 20px;}
-.judge-by-sns .tip{margin-left:230px;}
-
-.judge-by-phone{}
-.judge-by-phone .tip{width:120px;margin-left:4px;}
-.judge-by-phone .phone-info{margin-left:20px;margin-bottom:2px;display:none;}
-.judge-by-phone .phone-info div{clear:both;}
-.judge-by-phone .phone-info input{width:160px;font-size:14px;}
-.judge-by-phone .phone-info label{line-height:32px;}
-.judge-by-phone .phone-info ul,
-.judge-by-phone .phone-info label{float:left;}
-.judge-by-phone .phone-info .phone-info-nums{padding-top:10px;}
-.judge-by-phone .phone-info .phone-info-nums ul{}
-.judge-by-phone .phone-info .phone-info-nums ul .tip{width:100px;margin-left:26px;}
-.judge-by-phone .phone-info .phone-info-nums li{margin-bottom:8px;position:relative;}
-.judge-by-phone .phone-info .phone-info-nums a.add-phone-num-btn{width:160px;border:1px dashed #ccc;color:#666;padding:7px 4px;cursor:pointer;}
-.judge-by-phone .phone-info .phone-info-nums a.add-phone-num-btn:hover{text-decoration:none;}
-.judge-by-phone .phone-info .phone-info-nums p{margin-top:5px;}
-.judge-by-phone .phone-info .phone-info-nums li a.J_DeletePhoneBtn{background:url(images/icon-delete.png);width:16px;height:16px;text-indent: -50px;margin-left:4px;cursor:pointer;}
-*/
-
 /* 关注弹层 */
 #followDialog { width:480px; }
 #followDialog .bd { height:170px;background-image:url(images/follow-smeite.png);background-repeat:no-repeat; }
@@ -1462,20 +1364,6 @@ input:-moz-placeholder { font-size:12px; }
 .reply-dialog .reply-info span{}
 .reply-dialog .reply-info a{float:right;}
 
-/*advertisement*/
-.category-advertisement-right{position:absolute;width:210px;padding:0px 10px 10px 10px;color:#999;background-color:white;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;box-shadow:0 1px 3px rgba(34,25,25,0.2);-moz-box-shadow:0 1px 3px rgba(34,25,25,0.2);-webkit-box-shadow:0 1px 3px rgba(34,25,25,0.2);transition:0.3s;-webkit-transition:0.3s;-moz-transition:0.3s;-o-transition:0.3s;left:730px;}
-.advertisement-left{position:absolute;width:210px;padding:0px 10px 10px 10px;color:#999;background-color:white;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;box-shadow:0 1px 3px rgba(34,25,25,0.2);-moz-box-shadow:0 1px 3px rgba(34,25,25,0.2);-webkit-box-shadow:0 1px 3px rgba(34,25,25,0.2);transition:0.3s;-webkit-transition:0.3s;-moz-transition:0.3s;-o-transition:0.3s;left:0;}
-.advertisement-right{position:absolute;width:210px;padding:0px 10px 10px 10px;color:#999;background-color:white;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;box-shadow:0 1px 3px rgba(34,25,25,0.2);-moz-box-shadow:0 1px 3px rgba(34,25,25,0.2);-webkit-box-shadow:0 1px 3px rgba(34,25,25,0.2);transition:0.3s;-webkit-transition:0.3s;-moz-transition:0.3s;-o-transition:0.3s;left:730px;}
-.topic-advertisement-right{width:210px;margin-top:10px;padding:0px 10px 10px 10px;color:#999;background-color:white;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;box-shadow:0 1px 3px rgba(34,25,25,0.2);-moz-box-shadow:0 1px 3px rgba(34,25,25,0.2);-webkit-box-shadow:0 1px 3px rgba(34,25,25,0.2);transition:0.3s;-webkit-transition:0.3s;-moz-transition:0.3s;-o-transition:0.3s;}
-.sce-forum-advertisement-right{width:210px;margin-top:10px;padding:0px 10px 10px 10px;color:#999;background-color:white;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;box-shadow:0 1px 3px rgba(34,25,25,0.2);-moz-box-shadow:0 1px 3px rgba(34,25,25,0.2);-webkit-box-shadow:0 1px 3px rgba(34,25,25,0.2);transition:0.3s;-webkit-transition:0.3s;-moz-transition:0.3s;-o-transition:0.3s;}
-.advertisement-pic { position:relative;width:210px;overflow:hidden;padding-top:10px; }
-.advertisement-pic img { max-width:210px;}
-.advertisement-pic a{display:block;text-align:center;}
-.advertisement-pic span{z-index:2;width:200px;}
-.advertisement-pic i,.advertisement-pic span{display:block;position:absolute;left:0;bottom:0;color:#000000;height:28px;line-height:28px;text-align:right;cursor:pointer;}
-.advertisement-pic i{background-color:white;opacity: 0.8;filter: alpha(opacity=80);cursor:pointer;z-index:1;width:210px;}
-.reply-dialog .reply-info a{float:right;}
-
 /* icon */
 .icon{display:inline-block;display:-moz-inline-stack;zoom:1;*display:inline;overflow:hidden;width:16px;height:16px;vertical-align:middle;margin-right:2px;}
 /* 帖子icon */
@@ -1488,18 +1376,6 @@ input:-moz-placeholder { font-size:12px; }
 .i-status-general{background-position:0 -60px;}
 .forum a{cursor:pointer;}
 .i-d{display:block}
-/* Tab导航  */
-.tab-nav { border-bottom:1px dotted #d1d1d1;}
-.tab-nav a { float:left;display:block;line-height:1.1;*line-height:1.2;padding:0 5px 8px;*padding:0 5px 6px;font-weight:bold;}
-.tab-nav a:hover { margin-bottom:-1px;text-decoration:none;border-bottom:1px solid #ee2266; }
-.tab-nav a.on { margin-bottom:-1px;color:#333;border-bottom:1px solid #ee2266;}
-/* 关注谁  */
-.gper dt { width:50px;float:left;margin:0 5px 0 0;_margin:0 2px 0 0; }
-.gper dd { overflow:hidden;zoom:1; }
-.gper dd .from { line-height:1.4;color:#999; }
-
-/* 直角box */
-.vertical-box{border:1px solid #EAEAE1;border-bottom-width:3px;background-color:#fff;}
 
 
 /*gridGoods*/
@@ -1548,71 +1424,12 @@ input:-moz-placeholder { font-size:12px; }
 .i-like{background-position:-1px -1px;}
 .i-like-g{background-position:-2px -36px;}
 
-/* 领优惠 */
-.i-discount,i-choice{background-repeat:no-repeat;text-indent:-500px;overflow:hidden;}
-.get-discount-btn{background:url(images/pro-discount-btn.gif) 0 0 no-repeat;overflow:hidden;}
-.get-discount-btn:hover{text-decoration:none;}
-.get-discount-btn{background-position:0 0;width:65px;height:20px;line-height:20px;display:block;float:right;cursor: pointer;color:#fff;text-align:center;}
-.i-discount{background-image:url(images/pro-discount-png24.png);_background-image:url(images/pro-discount-png8.png);background-position:0 0px;width:88px;height:90px;position:absolute;top:10px;right:9px;}
-.i-choice{background-image:url(images/pro-choice-png24.png);_background-image:url(images/pro-choice-png8.png);background-position:0 0px;width:88px;height:90px;position:absolute;top:10px;right:9px;}
-/* 小编未编辑标记 */
-.i-no-editor{width:12px;height:12px;position:absolute;right:1px;bottom:1px;background:url(images/no-editor-i.gif);text-indent:-500px;overflow:hidden;}
 
-.discount-dialog{}
-.discount-dialog .text { height:30px;line-height:30px;margin-bottom:10px;overflow:hidden;font-family:'微软雅黑','YaHei','黑体','Hei',Tahoma,Helvetica,arial,sans-serif; }
-.discount-dialog .text label { float:left;font-size:18px;margin-right:10px;}
-.discount-dialog .discount-code {height:30px;line-height:30px;font-size:18px;font-weight:400;color:#ee2266;margin-right:15px}
-.discount-dialog .text a, .discount-dialog .text a:hover { color:#999; }
-.discount-dialog .shop-url { height:40px;line-height:40px;color:#fff;background:#ee2266;font-size:18px;padding:0 20px;border-radius:3px;font-family:'微软雅黑','YaHei','黑体','Hei',Tahoma,Helvetica,arial,sans-serif; }
-.shop-url:hover { background:#e80450;text-decoration:none; }
-.shop-url:active { background:#e6044f}
-.discount-dialog .howtouse { margin-bottom:10px;color:#666;line-height:30px;}
-.discount-dialog .howtouse span { color:#333; }
-.discount-dialog ul li{clear:both;line-height: 25px;}
-.discount-dialog ul li label{width:70px;text-align:right;float:left;padding-right:10px;}
-.discount-dialog ul li p{float:left;margin-top:2px;}
-.discount-dialog .bbl-btn{margin-right:5px;margin-left:70px;}
-.discount-dialog .vip-desc{text-align:center;font-size:14px;}
-.discount-dialog .error{padding:10px;font-size:14px;}
-.discount-dialog .shop-post{margin-left:30px;line-height: 36px;color:#333;}
-.discount-dialog .share-row { margin-top:13px}
-.discount-dialog .share-row label { margin-right:5px;line-height:20px;display:inline-block;zoom:1;*display:inline;overflow:hidden; }
-
-.discount-dialog .bind-opt label { padding-left:20px;background-image:url(images/icons-share.png);background-repeat:no-repeat;cursor:pointer; color:#666; }
-.discount-dialog .bind-opt span{color:#666;line-height:20px;display:inline-block;zoom:1;*display:inline;overflow:hidden;}
-.discount-dialog .bind-opt .bind-sina { background-position:0 -200px; }
-.discount-dialog .bind-opt .bind-tencent { background-position:0 -278px; }
-.discount-dialog .bind-opt .bind-qzone { background-position:0 -369px; }
-.discount-dialog .bind-opt .chk-bind { border:none;vertical-align:middle;vertical-align:3px\9;*vertical-align:-2px; }
-
-/* 喜欢 评论 */
-.count-like, .count-cmt { padding:0 0 0 18px;line-height:18px;font-size:12px;color:#BBB;background-image:url(images/like-icon2.png);background-repeat:no-repeat; }
-.count-cmt { margin-left:10px;background-position:1px -14px; }
-.count-like{background-position:0px -101px;}
-
-
-
-/* 复制按钮 */
-.z-x-copy{background:url(images/copyBtn.png) no-repeat;width:50px;height:20px;color:#666;border:0;margin-left:5px;font-size:12px;display:inline-block;margin-top:2px;}
-.copy-code { font-size:12px;color:#999;line-height:19px;padding:2px 13px ;background:#f7f7f7;border:1px solid #e8e8e8;display: inline-table;border-radius: 2px;/* background:url(images/copyBtn.png) no-repeat; */ }
-.copy-code.hover, .z-x-copy.hover{background:#f2f2f2;border:1px solid #e6e6e6;color:#999;}
-.copy-code.active, .z-x-copy.active{background:#f0f0f0;border:1px solid #e4e4e4;color:#888;}
 
 /* css 模仿三角形图片 */
 .triangle{border-width:6px; border-color:#f00 #000 #f0f #00f;font-size:0;line-height:0px;border-style:solid solid solid solid;}
 
 
-/* ipad safari  添加至主屏幕 */
-.safari-mask{display:none;z-index:2999;position:fixed;height: 100%;width: 100%;top:0;left:0;background-color: black;opacity: 0.8;}
-.safari-top{display:none;height:50px;line-height:50px;background-color: black;text-align:center;}
-.safari-top span{color:#fff;cursor:pointer;margin:0 auto;font-size:14px}
-.safari-top .safari-top-close{width:17px;height:17px;background:url(images/safari-mask.png) no-repeat 0 -943px;position:absolute;top:16px;right:15px;display:block;cursor:pointer}
-.safari-main{margin:0 auto;width:980px;position:relative;height: 100%;}
-.safari-add{display:none;width:60px;height:60px;background:url(images/safari-mask.png) no-repeat -17px -900px;right:15px;bottom:10px; position: fixed;cursor:pointer;z-index:12}
-.safari-mask .element{width:490px;height:109px;background:url(images/safari-mask.png) no-repeat;position:absolute;top:10px;left:123px;}
-.safari-mask .element01{width:485px;height:290px;background:url(images/safari-mask.png) no-repeat 0 -110px;position:absolute;top:140px;left:45px;}
-.safari-mask .element02{width:350px;height:370px;background:url(images/safari-mask.png) no-repeat -131px -410px;position:absolute;top:200px;left:560px;}
-.safari-mask .element-close{width:130px;height:35px;background:url(images/safari-mask.png) no-repeat -365px -930px;position:absolute;top:20px;right:90px;display:block;cursor:pointer}
 
 /* 喜欢 */
 #J_LikeDialog { display: none;width: 343px;border: 5px solid #ccc;-moz-border-radius: 3px;-webkit-border-radius: 3px;border-radius: 3px}
@@ -2514,7 +2331,7 @@ body .redactor_toolbar li a.redactor_btn_alignment	 		{ background-position: -62
 #nav a.btn-checkIn:hover {text-decoration:none;background:#92b03b url(images/checkIn-status.png) 07px -23px no-repeat;transition:bottom 0.3s;-webkit-transition:bottom 0.3s;-moz-transition:bottom 0.3s;-o-transition:bottom 0.3s;_background:#92b03b url(images/checkIn-status-ie6.png) 07px -23px no-repeat; }
 #nav a.checked {color:#999;display:block;margin:8px 0 0 5px;height:24px;overflow:hidden;line-height:24px;padding:0 12px 0 26px;text-decoration:none;background:#fff url(images/checkIn-status.png) 07px -54px no-repeat;_background:#92b03b url(images/checkIn-status-ie6.png) 07px -54px no-repeat; }
 #nav a.checked:hover{background:#fff url(images/checkIn-status.png) 07px -54px no-repeat;_background:#92b03b url(images/checkIn-status-ie6.png) 7px -54px no-repeat; }
-#checkin_intro{width:130px;line-height:20px;color:#666;padding:10px;position:absolute;z-index:9998;background:#FFF;top:38px;right:0;border:1px solid #e4e4e4;}
+#checkin_intro{width:130px;line-height:20px;color:#666;padding:10px;position:absolute;z-index:9998;background:#FFF;top:38px;right:0;border:1px solid #e4e4e4;border-top:none}
 #checkin_intro b{color:#F32A6B;}
 #checkin_intro  img{padding:5px 0;}
 #checkin_intro p{color:#999;line-height:18px;border-top:1px solid #f3f3f3;padding-top:5px;margin-top:5px;}
@@ -2539,6 +2356,8 @@ body .redactor_toolbar li a.redactor_btn_alignment	 		{ background-position: -62
 }
 #nav .person a.gohome { float:left;height:20px;line-height:20px;padding:0 24px 0 28px;max-width:100px;white-space:nowrap;word-wrap:normal;word-break:normal;text-overflow:ellipsis;-o-text-overflow:ellipsis;overflow:hidden; color:#333;}
 #nav .person a.gohome:hover, #nav .person .set-dropdown li a:hover, #nav .regLogin a:hover, #nav a.xiaoxi:hover,#nav a.btn-sg:hover, .dropdown li a:hover { color:#55aadd;text-decoration:none; }
+#nav .set-dropdown{ width: 86px}
+
 /* end */
 /*登陆后的消息*/
 #nav .xiaoxi-box { margin:8px 0 0 0;position:relative;height:20px;padding:2px 0;background:#fff;border:none;}
@@ -2587,15 +2406,7 @@ body .redactor_toolbar li a.redactor_btn_alignment	 		{ background-position: -62
 .dropdown li a { display:block;padding:7px 0;line-height:1.2;color:#666;border-bottom:1px solid #F3F3F3; }
 .dropdown li.last a { border:none; }
 
-#checkin_intro{line-height:20px;color:#666;padding:10px;width:110px;background:#FFF;}
-#checkin_intro b{color:#F32A6B;}
-#checkin_intro  .checkIn-prize{line-height: 30px; background: url(images/btn100.png) no-repeat 0 0 transparent;width: 107px;height: 30px;display: block;color: #fff;text-align: center;font-size: 14px;font-weight: bold;margin-top: 10px;}
-#checkin_intro p{line-height:18px;border-top:1px solid #f3f3f3;padding-top:5px;margin-top:5px;}
-#checkin_intro  .invite{color:#e26;;text-decoration: none;display: block;padding-top: 10px}
-#checkin_intro  .invite:hover{color:#ff7f00;text-decoration:underline;}
-#checkin_intro .checkin_on{color:#fff;background-color:#88b735;height:18px;line-height:18px;}
-#checkin_intro .checkin_off{color:#333;background-color:#dedede;height:18px;line-height:18px;}
-#checkin_intro .checkin_days{color:#9dc62c;font-size:30px;}
+
 
 /*全局 底部样式*/
 /*
